# c_buffer

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: c_buffer.c  c_buffer.h
test/: test_c_buffer.c
